<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Basics -->
    
    <string name="app_name">Brain Waves</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
   
   <!-- Main Activity-->
   
   <string name="buttonGraph">Lancer le graphique</string>
   <string name="buttonGraphCompare">Comparer les graphiques</string>
   <string name="buttonGraphFFT">Analyse FTT d\'un graphique</string>
   <string name="menu">Menu</string>
   <string name="NoBTAppair">Vous n\'avez pas appair&#233; le BrainWave !</string>
   <string name="battery">Batterie</string>
   <string name="connecting">Connexion en cours&#8230;</string>
   <string name="connected">Syst&#232;me connect&#233;</string>
   <string name="disconnect">Syst&#232;me d&#233;connect&#233; !</string>
   <string name="sysNotFound">Syst&#232;me non trouv&#233; !</string>
   
	<!-- Graphic -->
   	<string name="cancel">annuler</string>
  	<string name="set">configurer</string>
   	<string name="second">sec.</string>
  	<string name="paramsTimeDialogTitle">Temps d\'enregistrement :</string>
  	<string name="validation">Valider</string>
   	<string name="courbe_meditation">Courbe de m&#233;ditation</string>
	<string name="courbe_attention">Courbe d\'attention</string>
	<string name="courbe_clindoeil">Courbe de clin d\'oeil</string>
	<string name="courbe_delta">Courbe Delta</string>
	<string name="courbe_theta">Courbe Theta</string>
	<string name="courbe_lowalpha">Courbe Low Alpha</string>
	<string name="courbe_highalpha">Courbe High Alpha</string>
	<string name="courbe_lowbeta">Courbe Low Beta</string>
	<string name="courbe_highbeta">Courbe High Beta</string>
	<string name="courbe_lowgamma">Courbe Low Gamma</string>
	<string name="courbe_highgamma">Courbe High Gamma</string>
	<string name="separate_textview">----------------------------------------------</string>
	
	<!-- Compare -->
	<string name="selectCurve">Selectionner une courbe</string>
	<string name="addSave">Importer un enregistrement</string>
	<string name="removeSave">Des&#233;lectionner un enregistrement</string>
   	<string name="paramsFilesDialogTitle">S&#233;lection fichier</string>
	
   <!-- Gestion Bluetooth -->
      
    <string name="GestionBluetooth">Gestion Bluetooth</string>
    <string name="TRYAppair">Tentative d\'appairage</string>
    <string name="BTAppair">Le syst&#232;me a bien &#233;t&#233; appair&#233;</string>
    
    <string name="recherche"> La recherche est en cours &#8230;</string> <!-- &#8230; est le unicode de "..."   -->
    
	<!-- Buttons -->
	<string name="on">Activé</string>
	<string name="off">Désactivé</string>
	<string name="Visible">Rendre visible</string>
	<string name="buttonPairedDevices">Afficher les appareils appairés</string>
	<string name="buttonAroundDevices">Afficher les appareils environnants</string>
	<string name="ListPairedDevices">Liste des appareils appairés:</string>
	<string name="ListAroundDevices">Liste des appareils Bluetooth environnants :</string>

	 <!-- Paramètres -->   
	    
    <string name="settings">Paramètres</string>
    <string name="aide">Aide</string>
    <string name="propos">A propos</string>
    <string name="quitter">Quitter</string>
    <string name="title_activity_aide">Explications</string>
    <string name="aideTitre1"><u>Méditation et Attention :</u></string>
    <string name="meditation_attention_content">
        Voici comment interpréter les données concernant la méditation et l\'attention :\n
        - 0 -> l\'application n\'a pas réussi à obtenir des données convenables\n
        - 1 à 20 -> état d\'attention ou de méditation très faible\n
        - 20 à 40 -> état d\'attention ou de méditation faible\n
        - 40 à 60 -> état d\'attention ou de méditation neutre\n
        - 60 à 80 -> état d\'attention ou de méditation partiellement élevé\n
        - 80 à 100 -> état d\'attention ou de méditation élevé   
    </string>
    <string name="action_save">Télécharger</string>
	<string name="action_pause">Pause</string>
	<string name="action_time">Temps</string>
	<string name="action_upload">Affichage des Courbes</string>
	<string name="action_play">Play</string>

</resources>
