<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.testapp.MainActivity" >
    
    	<!-- <item 	android:id="@+id/action_params"
				android:icon="@drawable/ic_action_bluetooth"
          		android:title="@string/action_settings"
          		android:showAsAction="ifRoom"/> -->

    	<!-- <item	android:showAsAction="ifRoom"
    	    	android:title="@string/action_bt"
			    android:background="@drawable/play_btn" /> -->    	
    	
    	<!-- <item 	android:id="@+id/launch"
    	    	android:showAsAction="ifRoom"
    	    	android:icon="@drawable/ic_action_pause"
    	   		android:title="@string/action_pause"
    	   		android:state_selected="false"
    	   		android:state_pressed="false"
    	    	style="@style/PlayPause"/>  -->
    	    	
    	<!-- <item	android:id="@+id/launch"
    	    	android:title="@string/action_pause"
    	    	android:icon="@drawable/ic_action_pause"
    	    	android:showAsAction="ifRoom" /> -->
    	
    	<item 	android:id="@+id/time"
    	    	android:icon="@drawable/ic_action_time"
    	    	android:title="@string/action_time"
    	    	android:showAsAction="ifRoom"/>
    	
    	<item 	android:id="@+id/saveCSV"
    	    	android:icon="@drawable/ic_action_save"
    	    	android:title="@string/action_save"
    	    	android:showAsAction="ifRoom"/>
    	
    	<item 	android:id="@+id/battery"
    	    	android:icon="@drawable/ic_battery_full"
    	    	android:title="@string/battery"
    	    	android:showAsAction="ifRoom"/>
    	
    	<item 	android:id="@+id/selectCurve"
    	    	android:icon="@drawable/ic_add_curve"
    	    	android:title="@string/action_upload"
    	    	android:showAsAction="ifRoom"/>

    	<item 	android:id="@+id/settings" 
		    	android:title="@string/settings"/>
    		
	    <item 	android:id="@+id/propos" 
	      		android:title="@string/propos"/>
	 
		<item 	android:id="@+id/aide" 
		    	android:title="@string/aide"/>
		
		<item 	android:id="@+id/quitter" 
		    	android:title="@string/quitter"/>

</menu>
