<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/CB_meditation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courbe_meditation" />

        <CheckBox
            android:id="@+id/CB_attention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courbe_attention" />

        <CheckBox
            android:id="@+id/CB_clindoeil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courbe_clindoeil" />

    </LinearLayout>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

      <Button
            android:id="@+id/button_cancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/button_validation"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            style="?android:attr/borderlessButtonStyle" />

        
    </LinearLayout>

</LinearLayout>